2016-10-05	Now with a C (i.e. non-C++) compiler front-end; untested.

		bin/innocent-pear-front-end.tcc :
		- renamed from bin/innocent-pear-c++.cc, and made more generic

		bin/innocent-pear-c++.cc ,
		bin/innocent-pear-cc.cc :
		- new

		configure :
		- now looks for target-side C compiler and probes for its
		  properties

		GNUmakefile :
		- changed to build (and install) C compiler front-end

		.travis.yml :
		- now sets $CC_FOR_TARGET appropriately

		infra/travis-install-deps.sh :
		- now also installs target-side C compiler for tests

		include/innocent-pear/kthxbai.h :
		- removed really (!) redundant condition check

		include/innocent-pear/rofl.h :
		- added rofl<...>::time(.)

		include/innocent-pear/omg.h :
		- may now use rofl<...>::time(.)

		test/test-dawg-syn.cc ,
		test/test-dawg-syn.good :
		- reduced the number of randomizations

		.gitignore :
		- added innocent-pear-cc

		lolwutconf/ :
		- bumped to 7c7d904647

2016-10-04	More, more, more mixing.

		include/innocent-pear/kthxbai.h :
		- now further mixes (garbage) values from omg<...> into
		  computations, via orly<...>

		include/innocent-pear/omg.h :
		- omg<...>::omg(.) now tries to do getpid() or getppid()
		  syscalls if permitted

		include/innocent-pear/yarly.h :
		- _mea culpa_: "redundant condition check" (2016-04-19)
		  turns out to be not so redundant

2016-10-03	"May the forces of evil become confused on the way to your
		 house."  (3)

		include/innocent-pear/kthxbai.h :
		- kthxbai_impl<...> is now a class, not a struct...
		- added kthxbai_impl<...>::special(...), which does nothing
		  at the moment

		include/innocent-pear/lolwut.h :
		- `struct kthxbai_impl' -> `class kthxbai_impl'

		include/innocent-pear/omg.h :
		- omg<...>::omg(.):
		  - now tries to use `rdtsc', on x86-32 and x86-64
		  - now tries to use a (garbage) value in a register without
		    loading anything into it
		  - now tries to do arithmetic on (possibly garbage) values